<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/caratula"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        >
        <TextView
            android:id="@+id/ordenMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            android:textAppearance="?attr/textAppearanceCaption"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/lblDni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="35dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/dni"
            android:layout_width="0dp"
            tools:text="Dni"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toEndOf="@id/lblDni"
            app:layout_constraintEnd_toStartOf="@+id/ordenMon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="35dp"/>

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            app:layout_constraintTop_toTopOf="@id/nombre"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_marginStart="50dp"
            tools:text="Nombre"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="@+id/dni"
            app:layout_constraintTop_toBottomOf="@id/dni"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/lblMatri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matricula"
            app:layout_constraintTop_toTopOf="@id/matricula"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/matricula"
            android:layout_width="0dp"
            tools:text="Matricula"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="@id/nombre"
            app:layout_constraintTop_toBottomOf="@id/nombre"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/lblModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelo"
            app:layout_constraintTop_toTopOf="@id/modelo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/modelo"
            android:layout_width="0dp"
            tools:text="Modelo"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="@id/matricula"
            app:layout_constraintTop_toBottomOf="@id/matricula"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/lblFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            app:layout_constraintTop_toTopOf="@id/fecha"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/fecha"
            android:layout_width="0dp"
            tools:text="Fecha"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="@id/modelo"
            app:layout_constraintTop_toBottomOf="@id/modelo"
            android:layout_marginTop="40dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>