<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnadirActividad">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/a_adir_coche"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/lblDni"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="-80dp"
        android:layout_marginStart="-50dp"
        android:text="@string/dni"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dni"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_marginTop="-25dp"
        android:layout_marginStart="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="90dp"
        app:layout_constraintStart_toStartOf="@+id/lblDni"
        app:layout_constraintTop_toBottomOf="@+id/lblDni"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="9"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="73dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="0dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/dni"
        app:layout_constraintTop_toBottomOf="@+id/dni"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreApe"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_marginTop="-25dp"
        android:layout_marginStart="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="90dp"
        app:layout_constraintStart_toStartOf="@+id/lblNombre"
        app:layout_constraintTop_toBottomOf="@+id/lblNombre"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lblAnno"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="0dp"
        android:text="@string/matricula"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/nombreApe"
        app:layout_constraintTop_toBottomOf="@+id/nombreApe"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/anno"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_marginTop="-25dp"
        android:layout_marginStart="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="90dp"
        app:layout_constraintStart_toStartOf="@+id/lblAnno"
        app:layout_constraintTop_toBottomOf="@+id/lblAnno"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAnno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lblCod"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="290dp"
        android:layout_marginStart="0dp"
        android:text="@string/fecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/anno"
        app:layout_constraintTop_toBottomOf="@+id/anno"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cod"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_marginTop="-25dp"
        android:layout_marginStart="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="90dp"
        app:layout_constraintStart_toStartOf="@+id/lblCod"
        app:layout_constraintTop_toBottomOf="@+id/lblCod"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lblObservaciones"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="400dp"
        android:layout_marginStart="0dp"
        android:text="@string/observaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/anno"
        app:layout_constraintTop_toBottomOf="@+id/anno"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/observacion"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_marginTop="-25dp"
        android:layout_marginStart="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="90dp"
        app:layout_constraintStart_toStartOf="@+id/lblObservaciones"
        app:layout_constraintTop_toBottomOf="@+id/lblObservaciones"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtObservacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="520dp"
        android:layout_marginStart="0dp"
        android:text=""
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lblObservaciones"
        app:layout_constraintTop_toBottomOf="@+id/lblObservaciones"
        />

    <Button
        android:id="@+id/finalizar"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/ic_add"
        app:layout_constraintStart_toEndOf="@+id/lblCod"
        app:layout_constraintTop_toTopOf="@+id/lblCod"
        />

</androidx.constraintlayout.widget.ConstraintLayout>