<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/iniciar_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="-80dp"
        android:layout_marginStart="-50dp"
        android:text="@string/usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreUsu"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_marginTop="-25dp"
        android:layout_marginStart="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="90dp"
        app:layout_constraintStart_toStartOf="@+id/lblNombre"
        app:layout_constraintTop_toBottomOf="@+id/lblNombre"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lblContraseña"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="0dp"
        android:text="@string/contrasena"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/nombreUsu"
        app:layout_constraintTop_toBottomOf="@+id/nombreUsu"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contraseña"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_marginTop="-25dp"
        android:layout_marginStart="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="90dp"
        app:layout_constraintStart_toStartOf="@+id/lblContraseña"
        app:layout_constraintTop_toBottomOf="@+id/lblContraseña"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/ic_login"
        app:layout_constraintStart_toEndOf="@+id/lblContraseña"
        app:layout_constraintTop_toTopOf="@+id/lblContraseña"
        />

    <Button
        android:id="@+id/finalizar"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/ic_exit"
        app:layout_constraintStart_toEndOf="@+id/lblContraseña"
        app:layout_constraintTop_toTopOf="@+id/lblContraseña"
        />

</androidx.constraintlayout.widget.ConstraintLayout>